native/include/bluez_media_native.h

typedef struct BluezMediaPlayerRegistration {
  const char* adapter_path;
  const char* player_path;
  const char* name;
  const char* type;
  const char* subtype;
  uint8_t browsable;
  uint8_t searchable;
} BluezMediaPlayerRegistration;
typedef enum BluezMediaStatusCode {
  BLUEZ_MEDIA_SUCCESS = 0,
  BLUEZ_MEDIA_ERROR_INVALID_ARGUMENT = -1,
  BLUEZ_MEDIA_ERROR_BUFFER_TOO_SMALL = -2,
  BLUEZ_MEDIA_ERROR_OPERATION_FAILED = -3,
  BLUEZ_MEDIA_ERROR_UNSUPPORTED_SETTING = -4,
  BLUEZ_MEDIA_ERROR_ALREADY_EXISTS = -5,
  BLUEZ_MEDIA_ERROR_NOT_FOUND = -6,
} BluezMediaStatusCode;
typedef int32_t BluezMediaOperation;
#define BLUEZ_MEDIA_OP_PLAYER_PLAY 0
#define BLUEZ_MEDIA_OP_PLAYER_PAUSE 1
#define BLUEZ_MEDIA_OP_PLAYER_STOP 2
#define BLUEZ_MEDIA_OP_PLAYER_NEXT 3
#define BLUEZ_MEDIA_OP_PLAYER_PREVIOUS 4
#define BLUEZ_MEDIA_OP_PLAYER_FAST_FORWARD 5
#define BLUEZ_MEDIA_OP_PLAYER_REWIND 6
#define BLUEZ_MEDIA_OP_PLAYER_SET_REPEAT 7
#define BLUEZ_MEDIA_OP_PLAYER_SET_SHUFFLE 8
#define BLUEZ_MEDIA_OP_PLAYER_GET_PROPERTIES 9
#define BLUEZ_MEDIA_OP_PLAYER_GET_COVER_ART 10
#define BLUEZ_MEDIA_OP_CONTROL_PLAY 11
#define BLUEZ_MEDIA_OP_CONTROL_PAUSE 12
#define BLUEZ_MEDIA_OP_CONTROL_STOP 13
#define BLUEZ_MEDIA_OP_CONTROL_NEXT 14
#define BLUEZ_MEDIA_OP_CONTROL_PREVIOUS 15
#define BLUEZ_MEDIA_OP_CONTROL_VOLUME_UP 16
#define BLUEZ_MEDIA_OP_CONTROL_VOLUME_DOWN 17
typedef struct BluezMediaBuffer {
  uint8_t* data;
  int32_t length;
} BluezMediaBuffer;
BLUEZ_MEDIA_EXPORT int bluez_media_folder_get_properties(
    void* handle,
    const char* folder_path,
    BluezMediaBuffer* out);
// ── org.bluez.MediaItem1 browsing ──────────────────────────────────────────

BLUEZ_MEDIA_EXPORT int bluez_media_item_play(void* handle,
                                             const char* item_path);
BLUEZ_MEDIA_EXPORT int bluez_media_item_add_to_now_playing(
    void* handle,
    const char* item_path);
BLUEZ_MEDIA_EXPORT int bluez_media_item_get_properties(void* handle,
                                                       const char* item_path,
                                                       BluezMediaBuffer* out);
BLUEZ_MEDIA_EXPORT int bluez_media_item_get_cover_art(void* handle,
                                                      const char* item_path,
                                                      const char* target_file,
                                                      int32_t timeout_ms);
BLUEZ_MEDIA_EXPORT int bluez_media_item_get_cover_art_from_existing_session(
    void* handle,
    const char* item_path,
    const char* target_file,
    int32_t timeout_ms);
// ── org.bluez.MediaTransport1 remote transports ────────────────────────────

BLUEZ_MEDIA_EXPORT int bluez_media_transport_acquire(void* handle,
                                                     const char* transport_path,
                                                     BluezMediaBuffer* out);
BLUEZ_MEDIA_EXPORT int bluez_media_transport_try_acquire(
    void* handle,
    const char* transport_path,
    BluezMediaBuffer* out);
BLUEZ_MEDIA_EXPORT int bluez_media_transport_release(
    void* handle,
    const char* transport_path);
BLUEZ_MEDIA_EXPORT int bluez_media_transport_get_properties(
    void* handle,
    const char* transport_path,
    BluezMediaBuffer* out);
BLUEZ_MEDIA_EXPORT int bluez_media_transport_set_volume(
    void* handle,
    const char* transport_path,
    uint16_t volume);
BLUEZ_MEDIA_EXPORT int bluez_media_close_fd(int32_t fd);
// ── ObjectManager queries ──────────────────────────────────────────────────

BLUEZ_MEDIA_EXPORT int bluez_media_get_managed_objects(void* handle,
                                                       BluezMediaBuffer* out);