lib/bluez_media_native_bindings_generated.dart


  int bluez_media_folder_get_properties(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> folder_path,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_folder_get_properties(handle, folder_path, out);
  }

  late final _bluez_media_folder_get_propertiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_folder_get_properties');
  late final _bluez_media_folder_get_properties =
      _bluez_media_folder_get_propertiesPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<BluezMediaBuffer>,
            )
          >();

  /// ── org.bluez.MediaItem1 browsing ──────────────────────────────────────────
  int bluez_media_item_play(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> item_path,
  ) {
    return _bluez_media_item_play(handle, item_path);
  }

  late final _bluez_media_item_playPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_item_play');
  late final _bluez_media_item_play = _bluez_media_item_playPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_item_add_to_now_playing(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> item_path,
  ) {
    return _bluez_media_item_add_to_now_playing(handle, item_path);
  }

  late final _bluez_media_item_add_to_now_playingPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_item_add_to_now_playing');
  late final _bluez_media_item_add_to_now_playing =
      _bluez_media_item_add_to_now_playingPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
          >();

  int bluez_media_item_get_properties(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> item_path,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_item_get_properties(handle, item_path, out);
  }

  late final _bluez_media_item_get_propertiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_item_get_properties');
  late final _bluez_media_item_get_properties =
      _bluez_media_item_get_propertiesPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<BluezMediaBuffer>,
            )
          >();

  int bluez_media_item_get_cover_art(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> item_path,
    ffi.Pointer<ffi.Char> target_file,
    int timeout_ms,
  ) {
    return _bluez_media_item_get_cover_art(
      handle,
      item_path,
      target_file,
      timeout_ms,
    );
  }

  late final _bluez_media_item_get_cover_artPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('bluez_media_item_get_cover_art');
  late final _bluez_media_item_get_cover_art =
      _bluez_media_item_get_cover_artPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
            )
          >();

  int bluez_media_item_get_cover_art_from_existing_session(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> item_path,
    ffi.Pointer<ffi.Char> target_file,
    int timeout_ms,
  ) {
    return _bluez_media_item_get_cover_art_from_existing_session(
      handle,
      item_path,
      target_file,
      timeout_ms,
    );
  }

  late final _bluez_media_item_get_cover_art_from_existing_sessionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('bluez_media_item_get_cover_art_from_existing_session');
  late final _bluez_media_item_get_cover_art_from_existing_session =
      _bluez_media_item_get_cover_art_from_existing_sessionPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
            )
          >();

  /// ── org.bluez.MediaTransport1 remote transports ────────────────────────────
  int bluez_media_transport_acquire(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> transport_path,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_transport_acquire(handle, transport_path, out);
  }

  late final _bluez_media_transport_acquirePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_transport_acquire');
  late final _bluez_media_transport_acquire = _bluez_media_transport_acquirePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<BluezMediaBuffer>,
        )
      >();

  int bluez_media_transport_try_acquire(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> transport_path,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_transport_try_acquire(handle, transport_path, out);
  }

  late final _bluez_media_transport_try_acquirePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_transport_try_acquire');
  late final _bluez_media_transport_try_acquire =
      _bluez_media_transport_try_acquirePtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<BluezMediaBuffer>,
            )
          >();

  int bluez_media_transport_release(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> transport_path,
  ) {
    return _bluez_media_transport_release(handle, transport_path);
  }

  late final _bluez_media_transport_releasePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_transport_release');
  late final _bluez_media_transport_release = _bluez_media_transport_releasePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_transport_get_properties(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> transport_path,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_transport_get_properties(handle, transport_path, out);
  }

  late final _bluez_media_transport_get_propertiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_transport_get_properties');
  late final _bluez_media_transport_get_properties =
      _bluez_media_transport_get_propertiesPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<BluezMediaBuffer>,
            )
          >();

  int bluez_media_transport_set_volume(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> transport_path,
    int volume,
  ) {
    return _bluez_media_transport_set_volume(handle, transport_path, volume);
  }

  late final _bluez_media_transport_set_volumePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint16,
          )
        >
      >('bluez_media_transport_set_volume');
  late final _bluez_media_transport_set_volume =
      _bluez_media_transport_set_volumePtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)
          >();

  int bluez_media_close_fd(int fd) {
    return _bluez_media_close_fd(fd);
  }

  late final _bluez_media_close_fdPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int32)>>(
        'bluez_media_close_fd',
      );
  late final _bluez_media_close_fd = _bluez_media_close_fdPtr
      .asFunction<int Function(int)>();

  /// ── ObjectManager queries ──────────────────────────────────────────────────
  int bluez_media_get_managed_objects(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_get_managed_objects(handle, out);
  }

  late final _bluez_media_get_managed_objectsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<BluezMediaBuffer>)
        >
      >('bluez_media_get_managed_objects');
  late final _bluez_media_get_managed_objects =
      _bluez_media_get_managed_objectsPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<BluezMediaBuffer>)
          >();
}

final class BluezMediaPlayerRegistration extends ffi.Struct {
  external ffi.Pointer<ffi.Char> adapter_path;

  external ffi.Pointer<ffi.Char> player_path;

  external ffi.Pointer<ffi.Char> name;

  external ffi.Pointer<ffi.Char> type;

  external ffi.Pointer<ffi.Char> subtype;

  @ffi.Uint8()
  external int browsable;

  @ffi.Uint8()
  external int searchable;
}

enum BluezMediaStatusCode {
  BLUEZ_MEDIA_SUCCESS(0),
  BLUEZ_MEDIA_ERROR_INVALID_ARGUMENT(-1),
  BLUEZ_MEDIA_ERROR_BUFFER_TOO_SMALL(-2),
  BLUEZ_MEDIA_ERROR_OPERATION_FAILED(-3),
  BLUEZ_MEDIA_ERROR_UNSUPPORTED_SETTING(-4),
  BLUEZ_MEDIA_ERROR_ALREADY_EXISTS(-5),
  BLUEZ_MEDIA_ERROR_NOT_FOUND(-6);

  final int value;
  const BluezMediaStatusCode(this.value);

  static BluezMediaStatusCode fromValue(int value) => switch (value) {
    0 => BLUEZ_MEDIA_SUCCESS,
    -1 => BLUEZ_MEDIA_ERROR_INVALID_ARGUMENT,
    -2 => BLUEZ_MEDIA_ERROR_BUFFER_TOO_SMALL,
    -3 => BLUEZ_MEDIA_ERROR_OPERATION_FAILED,
    -4 => BLUEZ_MEDIA_ERROR_UNSUPPORTED_SETTING,
    -5 => BLUEZ_MEDIA_ERROR_ALREADY_EXISTS,
    -6 => BLUEZ_MEDIA_ERROR_NOT_FOUND,
    _ => throw ArgumentError("Unknown value for BluezMediaStatusCode: $value"),
  };
}

final class BluezMediaBuffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Int32()
  external int length;
}

typedef BluezMediaOperation = ffi.Int32;
typedef DartBluezMediaOperation = int;

const int BLUEZ_MEDIA_OP_PLAYER_PLAY = 0;

const int BLUEZ_MEDIA_OP_PLAYER_PAUSE = 1;

const int BLUEZ_MEDIA_OP_PLAYER_STOP = 2;

const int BLUEZ_MEDIA_OP_PLAYER_NEXT = 3;

const int BLUEZ_MEDIA_OP_PLAYER_PREVIOUS = 4;

const int BLUEZ_MEDIA_OP_PLAYER_FAST_FORWARD = 5;

const int BLUEZ_MEDIA_OP_PLAYER_REWIND = 6;

const int BLUEZ_MEDIA_OP_PLAYER_SET_REPEAT = 7;

const int BLUEZ_MEDIA_OP_PLAYER_SET_SHUFFLE = 8;

const int BLUEZ_MEDIA_OP_PLAYER_GET_PROPERTIES = 9;

const int BLUEZ_MEDIA_OP_PLAYER_GET_COVER_ART = 10;

const int BLUEZ_MEDIA_OP_CONTROL_PLAY = 11;

const int BLUEZ_MEDIA_OP_CONTROL_PAUSE = 12;

const int BLUEZ_MEDIA_OP_CONTROL_STOP = 13;

const int BLUEZ_MEDIA_OP_CONTROL_NEXT = 14;

const int BLUEZ_MEDIA_OP_CONTROL_PREVIOUS = 15;

const int BLUEZ_MEDIA_OP_CONTROL_VOLUME_UP = 16;

const int BLUEZ_MEDIA_OP_CONTROL_VOLUME_DOWN = 17;
